# tiny-instancer

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  challenges.yaml  compose.dev.yml  compose.yml  pyproject.toml
.github/workflows/: lint.yml
challenges/web/build-challenge/src/: app.py  docker-compose.yml
challenges/web/example-challenge/: challenge.yml
challenges/web/example-challenge/src/: docker-compose.yml
instancer/: __init__.py  __main__.py  builder.py  setup.py
instancer/auth_providers/: abc.py  ctfd.py  local.py  rctf.py
instancer/core/: auth.py  cache.py  challenges.py  config.py  instances.py  prunner.py
instancer/routes/: frontend.py
instancer/routes/v1/: instances.py
instancer/util/: hcaptcha.py  logger.py  time.py
templates/: auth.html  index.html
